LOVE 0.7.0
----------

  * Added love.thread module.
  * Added Source:play, Source:pause, etc.
  * Added Source:isStatic().
  * Added get/setGroupIndex to CircleShape and PolygonShape.
  * Added Font:getWrap.
  * Added identity field to love.conf.
  * Added love.quit callback.
  * Added love.focus callback.
  * Added extra meter parameter to love.physics.newWorld.
  * Added love.graphics.setIcon.
  * Enabled love.filesystem.FileData.
  * Fixed bug where the debug module was not an upvalue of the error handlers. (you can now override debug)
  * Fixed bug where love.audio.pause and friends were acting on everything, not just the passed Source.
  * Fixed setFixedRotation enabling other flags.
  * Fixed a bug in the loader (for require).
  * Fixed a bug where ParticleSystem::setSprite did not retain the new image.
  * Fixed a bug where images would lose their settings (wrapping, filters) when setMode as called.
  * Fixed a bug where shape:getBody wasn't exposed.
  * Fixed a bug where DistanceJoint:getType() returned "circle" - it now returns "distance".
  * Invalid FSAA values now fall back to working ones (or none at all).
  * Cleaned up traceback in error screen.
  * Moved fonts to love.font (from love.graphics), only rendering remains in love.graphics.
  * Switched font origin to top-left.
  * OS X now properly uses UTIs for .love files.
  * Fewer compiler warnings.

LOVE 0.6.2
----------

  * Fixed a bug causing ImageFonts to cut off some pixels.
  * Fixed a bug where filled rectangles were too small.
  * Fixed a bug in Image:setFilter where it would switch the parameters.
  * Fixed a bug in ImageRasterizer where it wasn't using the data.
  * Image filter and wrap modes now use string constants as well.
  * Fixed double-transform bug in SpriteBatch.
  * Errors are reported on stdout again.
  * Another fix for the icons on ubuntu.

LOVE 0.6.1
----------

  * Added Shape:setGroupIndex and getGroupIndex.
  * Added Body:setFixedRotation and Body:getFixedRotation.